# datadog-serverless-compat-py

./: .gitignore  LICENSE-3rdparty.csv  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
datadog_serverless_compat/: __init__.py  logger.py  main.py
tests/: test_logger.py  test_main.py
