[tool.poetry]
name = "datadog-serverless-compat"
version = "0.1.0"
description = "Datadog Serverless Compatibility Layer for Python"
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
license = "Apache-2.0"
requires-python = ">=3.9"
readme = "README.md"
repository = "https://github.com/DataDog/datadog-serverless-compat-py"
keywords = [
    "datadog",
    "azure",
    "google",
    "functions"
]
include = [
    { path = "datadog_serverless_compat/bin/**/*", format = ["sdist", "wheel"] }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
